fixing spacing on title

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -20,7 +20,7 @@ header{
     background-color: rgb(0, 0, 0);
   
     #site_title{
-        margin-top:2rem;
+        margin-top:4rem;
         text-align: center;
         color: rgb(238, 238, 238);
         a{
